--- a/ArturTI225.WebUI/Views/Account/Login.cshtml
+++ b/ArturTI225.WebUI/Views/Account/Login.cshtml
@@ -1,23 +1,44 @@
 ﻿@{
-ViewBag.Title = "Login";
-Layout = "../Shared/_AuthLayout.cshtml";
+    ViewBag.Title = "Login";
+    Layout = "../Shared/_AuthLayout.cshtml";
 }
 
-<div class="form-signin">
-    <h2 class="text-center">Please sign in</h2>
-    @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-    {
-    <div class="form-group">
-        <label for="username" class="sr-only">Username</label>
-        <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" rel="stylesheet">
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-lg p-3 mb-5 bg-white rounded">
+                <div class="card-body">
+                    <h2 class="card-title text-center">Please sign in</h2>
+                    @using (Html.BeginForm("Login", "Account", FormMethod.Post))
+                    {
+                        <div class="form-group">
+                            <label for="username">Username</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
+                                </div>
+                                <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <div class="input-group">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text" id="basic-addon2"><i class="fas fa-lock"></i></span>
+                                </div>
+                                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+                            </div>
+                        </div>
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                        <div class="text-center mt-2">
+                            <a href="@Url.Action("Register", "Account")">Don't have an account? Register here</a>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="password" class="sr-only">Password</label>
-        <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <div class="register-link">
-        <a href="@Url.Action("Register", "Account")">Register</a>
-    </div>
-    }
 </div>
