--- a/ArturTI225.WebUI/Views/Shared/_Layout.cshtml
+++ b/ArturTI225.WebUI/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                      <li>@Html.ActionLink("Logout", "Logout", "Account")</li>
                      if (User.IsInRole(Roles.Admin.ToString()))
                      {
-                        <li>@Html.ActionLink("Admin panel", "Index", "Admin")</li>
+                        <li>@Html.ActionLink("Cars Sales Panel", "Index", "CarsSalesPanel")</li>
                      }
                   }
                </ul>
